import grpc-netty-shaded

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,31 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-netty-shaded</artifactId>
+        </dependency>
+        <!-- <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+        </dependency> -->
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-netty-shaded</artifactId>
+                <version>1.58.0</version>
+            </dependency>
+            <!-- <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-bom</artifactId>
+                <version>4.1.99.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency> -->
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <plugin>
